float_eq/tests/derive_tests/ulps_tol/ulps_tol_duplicate_type_name.stderr
error: Duplicate `ulps_tol` argument
 --> $DIR/ulps_tol_duplicate_type_name.rs:7:5
  |
7 |     ulps_tol = "Name2"
  |     ^^^^^^^^
